# quacks

./: Cargo.toml  dune-project  package.json  quacks.opam  tsconfig.json
lib/: bag.ml  bag.mli  cauldron.ml  chip.ml  dune  game.ml  list_extension.ml
src/: bag.rs  bag.ts  board.ts  bonus_die.rs  cards.rs  cauldron.rs  cauldron.ts  chip.rs  game.rs  main.rs  player.rs  potion.ts  potion_phase.rs  round.ts  rule.ts  rules.rs  strategy.rs  types.ts
src/rules/: core.rs  set1.rs
src/strategy/: prefer_blue.rs  prefer_color.rs  simple.rs
test/: dune
