[package]
name = "quacks"
version = "0.1.0"
authors = ["Anders Hellerup Madsen <ahem@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = { version = "0.8.3", features = ["small_rng"] }
